# tinyserver

./: DEVELOPER.md  LICENSE  README.md  pyproject.toml
nanoserver/: __init__.py  server.py
