[project]
name = "nanoserver"
version = "0.1.0"
description = "Lightweight HTTP API server using Python stdlib"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Taufiqul Haque Khan Tusar", email="taufiqkhantusar@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/taufiq-ai/nanoserver"
Issues = "https://github.com/taufiq-ai/nanoserver/issues"

